--- a/style.css
+++ b/style.css
@@ -1,213 +1,92 @@
-@import url('http://fonts.cdnfonts.com/css/minecraft-4');
-*
-{
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700;800&display=swap');
+
+*{
+  font-family: "ubuntu";
+  color: #fff;
+  
+}
+
+body{
+  padding: 0;
+  margin: 0;
+
+}
+
+#bg{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/bg.jpg);
+  z-index: 0;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  filter: blur(100px);
+  overflow: hidden;
+  mix-blend-mode: color;
+}
+
+.separator{
+  width: 2px;
+  height: 90%;
+  display: block;
+  color: #fff;
+  opacity: 0;
+}
+
+nav{
+  display: inline-block;
+  width: 100%;
+  z-index: -1;
+  
+  
+}
+
+nav li{
+  float: right;
+  
+}
+nav ul li{
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'Minecraft', sans-serif;
-}
-header
-{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 40px 100px;
-  z-index: 1000;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-header .logo
-{
-  color: #fff;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.toggle
-{
-  position: relative;
-  width: 60px;
-  height: 60px;
-  background: url(https://i.ibb.co/HrfVRcx/menu.png);
-  background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: center;
-  cursor: pointer;
-}
-.toggle.active
-{
-  background: url(https://i.ibb.co/rt3HybH/close.png);
-  background-repeat: no-repeat;
-  background-size: 25px;
-  background-position: center;
-  cursor: pointer;
-}
-.showcase
-{
-  position: absolute;
-  right: 0;
-  width: 100%;
-  min-height: 100vh;
-  padding: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #111;
-  transition: 0.5s;
-  z-index: 2;
-}
-.showcase.active
-{
-  right: 300px;
+  overflow: hidden;
+  margin-top: 15px;
+  margin-right: 8px;
 }
 
-.showcase video
-{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-.overlay
-{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #03a9f4;
-  mix-blend-mode: overlay;
-}
-.text
-{
-  position: relative;
-  z-index: 10;
- width: 100%;
-  text-align: center;
-}
-
-.text h2
-{
-  font-size: 5em;
-  font-weight: 800;
-  color: #fff;
-  line-height: 1em;
-  text-transform: uppercase;
-}
-.text h3
-{
-  font-size: 4em;
-  font-weight: 700;
-  color: #fff;
-  line-height: 1em;
-  text-transform: uppercase;
-}
-.text p
-{
-  font-size: 1.1em;
-  color: #fff;
-  margin: 20px 0;
-  font-weight: 400;
-  right: 50px;
-}
-.text a
-{
-  display: inline-block;
-  font-size: 1em;
-  background: #fff;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 500;
-  margin-top: 10px;
-  color: #111;
-  letter-spacing: 2px;
-  transition: 0.2s;
-}
-.text a:hover
-{
-  letter-spacing: 6px;
-}
-.social
-{
-  position: absolute;
-  z-index: 10;
-  bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.social li
-{
-  list-style: none;
-}
-.social li a
-{
-  display: inline-block;
-  margin-right: 20px;
-  filter: invert(1);
-  transform: scale(0.5);
-  transition: 0.5s;
-}
-.social li a:hover
-{
-  transform: scale(0.5) translateY(-15px);
-}
-.menu
-{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.menu ul
-{
-  position: relative;
-}
-.menu ul li
-{
-  list-style: none;
-}
-.menu ul li a
-{
-  text-decoration: none;
-  font-size: 24px;
-  color: #111;
-}
-.menu ul li a:hover
-{
-  color: #03a9f4; 
-}
-
-@media (max-width: 991px)
-{
-  .showcase,
-  .showcase header
-  {
-    padding: 40px;
-  }
-  .text h2
-  {
-    font-size: 3em;
-  }
-  .text h3
-  {
-    font-size: 2em;
-  }
-}
-
-#media {
-  position: absolute;
-  height: 90px;
-  width: auto;
-  background-color: #000408;
+nav ul li a{
   display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  opacity: 0.9;
+}
+
+
+#logo{
+  float: left;
+  position: absolute;
+  text-transform: uppercase;
+  opacity: 0.6;
+  font-size: 48px;
+  color: #fff;
+  margin-left: 10px;
+  
+}
+
+#join{
+  background-color: #570A57;
+  border-radius: 6px;
+}
+
+#join:hover{
+  scale: 105%;
+  transform: translateY(-5px);
+  transition-duration: 0.5s;
+  background-color: #A91079;
+  padding: 18px 20px;
 }
