--- a/style.css
+++ b/style.css
@@ -7,25 +7,51 @@
   
 }
 
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 body{
   padding: 0;
   margin: 0;
+  background-color: #2E0249;
+  animation: 0.5s ease-in 0s 1 fadein ;
 
 }
 
 #bg{
+  user-select: none;
   position: fixed;
   width: 100%;
   height: 100%;
-
+ -webkit-user-drag: none;
   background-image: url(https://raw.githubusercontent.com/Amne-Dev/Voidless/main/.files/bg.jpg);
-  z-index: 0;
+  z-index: -1;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   filter: blur(100px);
   overflow: hidden;
   mix-blend-mode: color;
+  animation: 3s ease-in 0s 1 fadein ;
 }
 
 .separator{
@@ -37,9 +63,11 @@ body{
 }
 
 nav{
+  user-select: none;
   display: inline-block;
   width: 100%;
   z-index: -1;
+  animation: 1.5s ease-in 0s 1 fadein ;
   
   
 }
@@ -64,6 +92,7 @@ nav ul li a{
   padding: 14px 16px;
   text-decoration: none;
   opacity: 0.9;
+  font-size: 16px;
 }
 
 
@@ -84,9 +113,18 @@ nav ul li a{
 }
 
 #join:hover{
-  scale: 105%;
-  transform: translateY(-5px);
+  scale: 100%;
   transition-duration: 0.5s;
   background-color: #A91079;
   padding: 18px 20px;
+  border-radius: 15px;
+  font-size: 17px;
+}
+
+#join:active{
+  background-color: #F806CC;
+}
+
+#landing-page{
+  animation: 1.5s ease-in 0s 1 fadein ;
 }
