--- a/style.css
+++ b/style.css
@@ -6,7 +6,26 @@
   color: #fff;
   
 }
-
+@keyframes button-click {
+  0% {
+    letter-spacing: 1px;
+  }
+  20% {
+    letter-spacing: 2px;
+  }
+  40% {
+    letter-spacing: 3px;
+  }
+  60% {
+    letter-spacing: 3px;
+  }
+  80% {
+    letter-spacing: 2px;
+  }
+  100% {
+    letter-spacing: 1px;
+  }
+}
 
 @keyframes fadein {
   0% {
@@ -69,7 +88,6 @@ nav{
   z-index: -1;
   animation: 1.5s ease-in 0s 1 fadein ;
   
-  
 }
 
 nav li{
@@ -82,7 +100,7 @@ nav ul li{
   padding: 0;
   overflow: hidden;
   margin-top: 15px;
-  margin-right: 8px;
+  margin-right: 25px;
 }
 
 nav ul li a{
@@ -103,7 +121,7 @@ nav ul li a{
   opacity: 0.6;
   font-size: 48px;
   color: #fff;
-  margin-left: 10px;
+  margin-left: 25px;
   
 }
 
@@ -116,15 +134,82 @@ nav ul li a{
   scale: 100%;
   transition-duration: 0.5s;
   background-color: #A91079;
-  padding: 18px 20px;
+  padding: 14px 16px;
   border-radius: 15px;
-  font-size: 17px;
+  letter-spacing: 2px;
 }
 
 #join:active{
   background-color: #F806CC;
+  animation: 0.5s ease-in 0s 1 button-click
 }
 
 #landing-page{
+  padding-top: 100px;
   animation: 1.5s ease-in 0s 1 fadein ;
+  width: 100%;
+  height: 100%;
+}
+
+#landing-page .title{
+  opacity: 0.8;
+  font-size: 48px;
+  text-align: center;
+}
+
+#landing-page .p-landing{
+  opacity: 0.8;
+  text-align: center;
+  font-size: 24px;
+}
+
+#landing-button{
+  display: inline-block;
+  font-size: 18px;
+}
+
+#landing-button li{
+  float: left;
+  list-style-type: none;
+}
+
+#landing-button li a{
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  opacity: 0.9;
+  font-size: 16px;
+}
+
+#commands{
+  background-color: #570A57;
+  border-radius: 6px;
+}
+
+#commands:hover{
+  scale: 100%;
+  transition-duration: 0.5s;
+  background-color: #A91079;
+  padding: 14px 16px;
+  border-radius: 15px;
+  letter-spacing: 2px;
+}
+
+#commands:active{
+  background-color: #F806CC;
+  animation: 0.5s ease-in 0s 1 button-click
+}
+
+#invite:hover{
+  scale: 100%;
+  transition-duration: 0.5s;
+  padding: 14px 16px;
+  border-radius: 15px;
+  letter-spacing: 2px;
+}
+
+#invite:active{
+  animation: 4s ease-in 0s 1 button-click ;
 }
