--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   color: #fff;
   
 }
+
 @keyframes button-click {
   0% {
     letter-spacing: 1px;
@@ -46,6 +47,10 @@
   100% {
     opacity: 1;
   }
+}
+
+a{
+  user-select: none;
 }
 
 body{
@@ -135,7 +140,6 @@ nav ul li a{
   transition-duration: 0.5s;
   background-color: #A91079;
   padding: 14px 16px;
-  border-radius: 15px;
   letter-spacing: 2px;
 }
 
@@ -149,6 +153,17 @@ nav ul li a{
   animation: 1.5s ease-in 0s 1 fadein ;
   width: 100%;
   height: 100%;
+}
+
+#Inbox:hover{
+  scale: 100%;
+  transition-duration: 0.5s;
+  padding: 14px 16px;
+  letter-spacing: 2px;
+}
+
+#Inbox:active{
+  animation: 4s ease-in 0s 1 button-click ;
 }
 
 #landing-page .title{
@@ -193,7 +208,6 @@ nav ul li a{
   transition-duration: 0.5s;
   background-color: #A91079;
   padding: 14px 16px;
-  border-radius: 15px;
   letter-spacing: 2px;
 }
 
@@ -206,10 +220,10 @@ nav ul li a{
   scale: 100%;
   transition-duration: 0.5s;
   padding: 14px 16px;
-  border-radius: 15px;
   letter-spacing: 2px;
 }
 
 #invite:active{
   animation: 4s ease-in 0s 1 button-click ;
 }
+
