--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ nav{
   width: 100%;
   z-index: -1;
   animation: 1.5s ease-in 0s 1 fadein ;
+  background: none;
   
 }
 
@@ -153,6 +154,7 @@ nav ul li a{
   animation: 1.5s ease-in 0s 1 fadein ;
   width: 100%;
   height: 100%;
+  background: none;
 }
 
 #Inbox:hover{
