--- a/style.css
+++ b/style.css
@@ -332,23 +332,61 @@ nav ul li a{
   #our-vision{
     margin-top: 28vh;
     height: 500px;
-    float: left;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  #our-vision .title{
+    margin-left: 0vh;
+    text-align: center;
   }
 
   #discord-server{
     margin-top: 30vh;
     right: 0;
-    text-align: right;
-    float: right;
+    text-align: center;
   }
 
   #our-vision #p-our-vision{
     opacity: 0.8;
     font-size: 24px;
-    text-align: left;
-    margin-left: 15vh;
-    width: 100%px;
+    text-align: center;
+    margin-left: 0vh;
+    width: 100%;
     line-height: 36px;
   }
 
+  #discord-server .title{
+    opacity: 0.8;
+    font-size: 48px;
+    text-align: center;
+    margin-right: 2vh;
+  }
+  
+  .p-discord-server{
+    opacity: 0.8;
+    font-size: 24px;
+    text-align: center;
+    margin-right: 2vh;
+    padding-right: 0;
+  
+    line-height: 36px;
+    right: 0;
+  }
+
+  #discord-server img{
+  display: none;
+  }
+
+  #our-vision img{
+    display: none;
+    }
+
+    #a-discord-server{
+      margin-right: 8vh;
+    }
+
+    #landing-page .title{
+      font-size: 36px;
+    }
 }
