--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 *{
   font-family: "ubuntu";
   color: #fff;
+  box-sizing: border-box;
   
 }
 
@@ -273,9 +274,11 @@ nav ul li a{
 .p-discord-server{
   opacity: 0.8;
   font-size: 24px;
-  text-align: right;
+  text-align: left;
   margin-right: 25vh;
   padding-right: 0;
+  position: relative;
+  left: 15px;
 
   line-height: 36px;
   right: 0;
@@ -323,8 +326,10 @@ nav ul li a{
 
 #discord-server img{
   float: left;
-  margin-left: 40px;
-  margin-bottom: 80px;
+  margin-left: 20px;
+  margin-bottom: 120px;
+
+  
 }
 
 @media screen and (max-width: 480px) {
